--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "antd": "^5.4.0",
     "aos": "^2.3.4",
     "apexcharts": "^3.32.1",
+    "axios": "^1.5.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
     "clean-webpack-plugin": "^4.0.0",
@@ -63,6 +64,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-drag-and-drop": "^3.0.0",
     "react-feather": "^2.0.10",
+    "react-google-charts": "^4.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.5",
     "react-horizontal-timeline": "^1.4.0",
@@ -72,6 +74,7 @@
     "react-ion-slider": "^1.0.17",
     "react-owl-carousel": "^2.3.3",
     "react-password-toggle-icon": "^1.1.5",
+    "react-phone-number-input": "^3.3.6",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^5.3.4",
     "react-rte": "^0.16.5",
