--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jquery": "^3.6.0",
     "mini-css-extract-plugin": "^2.4.5",
     "process": "^0.11.10",
+    "qrious": "^4.0.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.3.9",
     "react-beautiful-dnd": "^13.1.1",
