--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-owl-carousel": "^2.3.3",
     "react-password-toggle-icon": "^1.1.5",
     "react-phone-number-input": "^3.3.6",
+    "react-quill": "^2.0.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^5.3.4",
     "react-rte": "^0.16.5",
