--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@hookform/resolvers": "^2.9.11",
     "@mui/material": "^5.13.0",
     "@react-latest-ui/react-sticky-notes": "^0.2.6",
+    "@reduxjs/toolkit": "^1.9.6",
     "ajv": "^8.12.0",
     "ajv-keywords": "^5.1.0",
     "alertifyjs": "^1.13.1",
@@ -78,6 +79,7 @@
     "react-phone-number-input": "^3.3.6",
     "react-quill": "^2.0.0",
     "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^5.3.4",
     "react-rte": "^0.16.5",
     "react-scripts": "^5.0.1",
