--- a/package.json
+++ b/package.json
@@ -113,7 +113,8 @@
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
     "babel-loader": "^8.2.3",
-    "html-webpack-plugin": "^5.5.0"
+    "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.69.5"
   },
   "browserslist": {
     "production": [
