--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "html-loader": "^3.0.1",
     "jquery": "^3.6.0",
     "mini-css-extract-plugin": "^2.4.5",
+    "moment": "^2.30.1",
     "process": "^0.11.10",
     "qrious": "^4.0.2",
     "react": "^18.2.0",
