--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-drag-and-drop": "^3.0.0",
     "react-feather": "^2.0.10",
+    "react-ga": "^3.3.1",
     "react-google-charts": "^4.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.5",
